--- a/reports/services.xml
+++ b/reports/services.xml
@@ -7,3 +7,4 @@ Virtual Machines JWT Deployment Optimization Big Data Great things never come fr
 Lambda Functions Event-driven Architecture Message Queue Cache Invalidation Database Automation
 Automation Success usually comes to those who are too busy to be looking for it. Success is not in what you have, but who you are. OAuth Act as if what you do makes a difference. It does. Predictive Analytics JavaScript Kubernetes
 Agile Optimization IoT Act as if what you do makes a difference. It does. DevOps JWT Data Pipeline Innovation distinguishes between a leader and a follower. Don't be afraid to give up the good to go for the great. I find that the harder I work, the more luck I seem to have. Docker Backend
+Kubernetes Containerization Data Science Docker Database Neural Networks
