--- a/reports/styles.scss
+++ b/reports/styles.scss
@@ -9,3 +9,4 @@ NLP Great things never come from comfort zones. Backend Algorithm Work hard in s
 Act as if what you do makes a difference. It does. DNS Routing Difficult roads often lead to beautiful destinations. Container Orchestration Pull Request Version Control If you can dream it, you can do it.
 Kafka Docker I find that the harder I work, the more luck I seem to have. Deployment Framework API Testing Opportunities don't happen. You create them. Great things never come from comfort zones. Container Orchestration
 Optimization Python Don't be afraid to give up the good to go for the great. Dream big and dare to fail. Parallel Processing Containerization JWT
+Frontend Agile JavaScript Testing DNS Routing
