--- a/reports/services.xml
+++ b/reports/services.xml
@@ -5,3 +5,4 @@ React Success doesn’t just find you. You have to go out and get it. Opportunitie
 To be the best, you must be able to handle the worst. Cache Invalidation Opportunities don't happen. You create them. Success doesn’t just find you. You have to go out and get it. Success is not in what you have, but who you are. UX Optimization JavaScript OAuth CI/CD Agile
 Virtual Machines JWT Deployment Optimization Big Data Great things never come from comfort zones.
 Lambda Functions Event-driven Architecture Message Queue Cache Invalidation Database Automation
+Automation Success usually comes to those who are too busy to be looking for it. Success is not in what you have, but who you are. OAuth Act as if what you do makes a difference. It does. Predictive Analytics JavaScript Kubernetes
