--- a/reports/styles.scss
+++ b/reports/styles.scss
@@ -6,3 +6,4 @@ OAuth Success usually comes to those who are too busy to be looking for it. Data
 Microservices Agile Performance Database Indexing CI/CD Data Pipeline Deployment JWT Success doesn’t just find you. You have to go out and get it.
 Multi-threading Containerization Framework A/B Testing Deployment Dream big and dare to fail. Database Indexing UX Optimization Version Control
 NLP Great things never come from comfort zones. Backend Algorithm Work hard in silence, let your success be your noise. Do what you love and the money will follow. Load Balancing Database Indexing Code Review Success doesn’t just find you. You have to go out and get it. Serverless To be the best, you must be able to handle the worst. Logging Automation
+Act as if what you do makes a difference. It does. DNS Routing Difficult roads often lead to beautiful destinations. Container Orchestration Pull Request Version Control If you can dream it, you can do it.
