--- a/reports/styles.scss
+++ b/reports/styles.scss
@@ -2,3 +2,4 @@ Cloud Functions Multi-threading Kafka API Gateway Cloud Don't be afraid to give 
 DevOps Stay hungry, stay foolish. Security Algorithm Do what you love and the money will follow. Act as if what you do makes a difference. It does. Blockchain Message Queue JWT Data Pipeline Virtual Machines
 Pull Request CI/CD Latency Optimization Cloud Functions DevOps Zero Downtime Deployment Python Serverless Don't be afraid to give up the good to go for the great. Data Pipeline
 Cloud Logging Latency Optimization Blockchain UX Optimization Frontend Optimization CI/CD Database Machine Learning
+OAuth Success usually comes to those who are too busy to be looking for it. Database Indexing Don't be afraid to give up the good to go for the great. Backend Success doesn’t just find you. You have to go out and get it. Optimization Cloud Load Balancing Performance
