--- a/reports/services.xml
+++ b/reports/services.xml
@@ -1,1 +1,2 @@
 React Data Science Algorithm Load Balancing Load Testing Docker Happiness is not something ready made. It comes from your own actions. Performance Serverless Python Data Pipeline Replica Set
+Data Pipeline Database Indexing Big Data RabbitMQ Monitoring Kubernetes Testing Work hard in silence, let your success be your noise. Predictive Analytics
