--- a/reports/styles.scss
+++ b/reports/styles.scss
@@ -1,1 +1,2 @@
 Cloud Functions Multi-threading Kafka API Gateway Cloud Don't be afraid to give up the good to go for the great.
+DevOps Stay hungry, stay foolish. Security Algorithm Do what you love and the money will follow. Act as if what you do makes a difference. It does. Blockchain Message Queue JWT Data Pipeline Virtual Machines
